--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
+    "express-query-boolean": "^2.0.0",
+    "express-rate-limit": "^5.2.6",
+    "helmet": "^4.6.0",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.12",
+    "mongoose-paginate-v2": "^1.3.18",
     "morgan": "1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -28,5 +36,20 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "nodemon": "2.0.7"
-  }
+  },
+  "main": ".eslintrc.js",
+  "bin": {
+    "template": "server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KaterynaLutska/nodejs-homework-rest-api.git"
+  },
+  "author": "Kateryna Lutska",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KaterynaLutska/nodejs-homework-rest-api/issues"
+  },
+  "homepage": "https://github.com/KaterynaLutska/nodejs-homework-rest-api#readme",
+  "description": ""
 }
